deploy_canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-canary
  template:
    metadata:
      labels:
        app: myapp-canary
    spec:
      containers:
        - name: myapp
          image: myapp_canary:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Never
