service_canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary
spec:
  selector:
    app: myapp-canary
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
